syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "material_category.proto";
import "material_return_type.proto";

message MaterialReturnCauseInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //备注
    string remark=4;
    //物料类别
    repeated MaterialReturnCauseAvailableCategoryInfo materialCategories=5;
    //归属类型
    repeated MaterialReturnCauseAvailableTypeInfo materialReturnTypes=6;
}

message MaterialReturnCauseAvailableCategoryInfo{
    string id=1;
    string materialReturnCauseID=2;
    string materialCategoryID=3;
    MaterialCategoryInfo materialCategory=4;
}

message MaterialReturnCauseAvailableTypeInfo{
    string id=1;
    string materialReturnCauseID=2;
    string materialReturnTypeID=3;
    MaterialReturnTypeInfo materialReturnType=4;
}

message QueryMaterialReturnCauseRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // 代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryMaterialReturnCauseResponse{
    Code code=1;
    string message=2;
    repeated MaterialReturnCauseInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialReturnCauseResponse{
    Code code=1;
    string message=2;
    repeated MaterialReturnCauseInfo data=3;
}

message GetMaterialReturnCauseDetailResponse{
    Code code=1;
    string message=2;
    MaterialReturnCauseInfo data=3;
}